# qkrig

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
Scripts/: check_usgs_activity.py  dispatch_usgs_krig_range.sh  dispatch_usgs_krig_range_subdaily.sh  fetch_data.py  qkrig_ts_daily.py  qkrig_ts_hourly.py  qkrig_ts_range.sh  qkrig_ts_range_hourly.sh  replot_from_exports.py  run_usgs_krig_day.py  run_usgs_krig_hour.py  usgs_bulk_fetch.py  usgs_dump_raw.py  usgs_raw_to_daily_kv.py  usgs_raw_to_hourly_kv.py
configs/: camelskrig.yaml  plot_config.yaml  simulationkrig.yaml  usgsgaugekrig.yaml
data/: conus_land_mask.npy  usgs_active_sites_Oct01_2024.txt  usgs_activity_summary_Oct01_2024.csv  usgs_inactive_sites_Oct01_2024.txt
environment/: environment_conda.yml  requirements.txt
notebooks/: camelskrig.ipynb  landmask.ipynb  qkrig_timeseries_new_england.ipynb  simulationkrig.ipynb  usgsgaugekrig.ipynb
src/: camelskrig.py  simulationkrig.py  usgsgaugekrig.py
src/core/: base_krig.py  base_loader.py
src/interpolation/: camels_krig.py  usgs_krig.py
src/loaders/: camels_loader.py  usgs_loader.py
src/vis/: visualizations.py
tests/: test_USGSLoader.py
